--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,17 @@
         android:theme="@style/Theme.Motivation"
         tools:targetApi="31">
         <activity
+            android:name=".UserActivity"
+            android:exported="true"
+            android:label="@string/title_activity_user"
+            android:theme="@style/Theme.Motivation.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
