--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Motivation"
         tools:targetApi="31">
         <activity
-            android:name=".UserActivity"
+            android:name=".ui.UserActivity"
             android:exported="true"
             android:label="@string/title_activity_user"
             android:theme="@style/Theme.Motivation.NoActionBar">
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="false">
         </activity>
     </application>
